--- a/Styles/LogItems.xaml
+++ b/Styles/LogItems.xaml
@@ -1,35 +1,37 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:selectors="clr-namespace:PingApp.Selectors">
-    
-    <Style x:Key="Verbose" TargetType="ListViewItem">
-        <Setter Property="Background" Value="Beige" />
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
+    <Style x:Key="ListViewItemStyle" TargetType="{x:Type ListViewItem}">
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding Level}" Value="Verbose">
+                <Setter Property="Background" Value="Beige" />
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Level}" Value="Debug">
+                <Setter Property="Background" Value="LightGreen" />
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Level}" Value="Information">
+                <Setter Property="Background" Value="LightBlue" />
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Level}" Value="Warning">
+                <Setter Property="Background" Value="DarkOrange" />
+                <Setter Property="Foreground" Value="White" />
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Level}" Value="Error">
+                <Setter Property="Background" Value="Red" />
+                <Setter Property="Foreground" Value="White" />
+            </DataTrigger>
+            <DataTrigger Binding="{Binding Level}" Value="Fatal">
+                <Setter Property="Background" Value="DarkRed" />
+                <Setter Property="Foreground" Value="White" />
+            </DataTrigger>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Foreground" Value="Black" />
+            </Trigger>
+            <Trigger Property="IsSelected" Value="True">
+                <Setter Property="FontWeight" Value="Bold" />
+                <Setter Property="Foreground" Value="Black" />
+            </Trigger>
+        </Style.Triggers>
     </Style>
-    <Style x:Key="Debug" TargetType="ListViewItem">
-        <Setter Property="Background" Value="LightGreen" />
-    </Style>
-    <Style x:Key="Information" TargetType="ListViewItem">
-        <Setter Property="Background" Value="LightBlue" />
-    </Style>
-    <Style x:Key="Warning" TargetType="ListViewItem">
-        <Setter Property="Background" Value="DarkOrange" />
-        <Setter Property="Foreground" Value="White" />
-    </Style>
-    <Style x:Key="Error" TargetType="ListViewItem">
-        <Setter Property="Background" Value="Red" />
-        <Setter Property="Foreground" Value="White" />
-    </Style>
-    <Style x:Key="Fatal" TargetType="ListViewItem">
-        <Setter Property="Background" Value="DarkRed" />
-        <Setter Property="Foreground" Value="White" />
-    </Style>
-    
-    <selectors:LogItemStyle x:Key="logItemStyleSelector"
-                            VerboseStyle="{StaticResource Verbose}"
-                            DebugStyle="{StaticResource Debug}"
-                            InformationStyle="{StaticResource Information}"
-                            WarningStyle="{StaticResource Warning}"
-                            ErrorStyle="{StaticResource Error}"
-                            FatalStyle="{StaticResource Fatal}"/>
-    
+
 </ResourceDictionary>
