--- a/Controls/ProgressBarTimeout.xaml
+++ b/Controls/ProgressBarTimeout.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PingApp.Controls.MyProgressBar"
+﻿<UserControl x:Class="PingApp.Controls.ProgressBarTimeout"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" x:Name="uc">
     <Grid>
-        <Border Background="White" BorderBrush="Gray" BorderThickness="1">
+        <Border Background="AntiqueWhite" BorderBrush="#546A76" BorderThickness="1">
             <Border BorderBrush="White" BorderThickness="1">
                 <Grid>
                     <Grid.Background>
@@ -19,10 +19,10 @@
                     <Grid Width="{Binding ProgressBarWidth, ElementName=uc, FallbackValue=200}" HorizontalAlignment="Left">
                         <Grid.Background>
                             <LinearGradientBrush EndPoint="1,0.5" StartPoint="0,0.5">
-                                <GradientStop Color="#FF8BBA91" Offset="0" />
-                                <GradientStop Color="#FF8BBA91" Offset="1" />
-                                <GradientStop Color="#FF9ED76A" Offset="0.8" />
-                                <GradientStop Color="#FF9ED76A" Offset="0.2" />
+                                <GradientStop Color="#FFE78F8F" Offset="0" />
+                                <GradientStop Color="#FFE78F8F" Offset="1" />
+                                <GradientStop Color="#FFC53440" Offset="0.8" />
+                                <GradientStop Color="#FFC53434" Offset="0.2" />
                             </LinearGradientBrush>
                         </Grid.Background>
                     </Grid>
@@ -36,10 +36,10 @@
                         </Border.Background>
                     </Border>
                     <TextBlock HorizontalAlignment="Center" 
-                               Foreground="#546A76" 
-                               FontWeight="DemiBold" 
-                               VerticalAlignment="Center">
-                               <Run Text="{Binding Percent, ElementName=uc}"></Run><Run Text="%"></Run>
+                               Foreground="Black" 
+                               FontWeight="Bold" 
+                               VerticalAlignment="Center"
+                               Text="{Binding Count, ElementName=uc}">
                     </TextBlock>
                 </Grid>
             </Border>
