--- a/Views/ConfigView.xaml
+++ b/Views/ConfigView.xaml
@@ -87,5 +87,11 @@
                  Foreground="Black" Background="AliceBlue" 
                  Height="20" Width="100" HorizontalAlignment="Left"
                  Text="{Binding SelectedConfig.PingerRepeatCount, UpdateSourceTrigger=PropertyChanged}"/>
+        <TextBlock Grid.Column="1" Grid.Row="4" Margin="5 0 0 0" VerticalAlignment="Top"
+                Text="Delay ping" Height="25"/>
+        <TextBox Grid.Column="1" Grid.Row="4" Margin="5 20 0 0" VerticalAlignment="Top"
+                Foreground="Black" Background="AliceBlue" 
+                Height="20" Width="100" HorizontalAlignment="Left"
+                Text="{Binding SelectedConfig.PingDelay, UpdateSourceTrigger=PropertyChanged}"/>
     </Grid>
 </UserControl>
